--- a/team.html
+++ b/team.html
@@ -201,7 +201,7 @@
 						</div>
 						<figcaption>
 							<div class="team-member-position margin-20px-top text-center">
-								<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Tushar Mali</div>
+								<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Tom Johnson</div>
 								<div class="text-extra-small text-uppercase text-medium-gray">Founder / CEO</div>
 							</div>
 						</figcaption>
@@ -249,7 +249,7 @@
 						</div>
 						<figcaption>
 							<div class="team-member-position margin-20px-top text-center">
-								<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Rahul Nachare</div>
+								<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">John Wick</div>
 								<div class="text-extra-small text-uppercase text-medium-gray">Co-Founder / Design </div>
 							</div>
 						</figcaption>
@@ -297,7 +297,7 @@
 					<h5 class="text-extra-dark-gray alt-font text-uppercase font-weight-700">Design is not just what it looks like and feels like. Design is how it works.</h5>
 					<p class="width-90 md-width-100">Pofo philosophy that great design can only be delivered by people with a deep social and cultural understanding of the communities they designing. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever...</p>
 					<img src="images/signature-dark.png" alt="" class="margin-15px-top md-no-margin-top">
-					<span class="text-extra-dark-gray text-large d-block margin-30px-top alt-font font-weight-600 sm-margin-20px-top">Tushar Mali</span>
+					<span class="text-extra-dark-gray text-large d-block margin-30px-top alt-font font-weight-600 sm-margin-20px-top">Tom Johnson</span>
 					<span class="d-block">From the chairman's desk</span>
 				</div>
 			</div>
@@ -350,7 +350,7 @@
 									</div>
 									<figcaption>
 										<div class="team-member-position margin-20px-top text-center">
-											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Tushar Mali</div>
+											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">John Doe</div>
 											<div class="text-extra-small text-uppercase text-medium-gray">Founder / CEO</div>
 										</div>
 									</figcaption>
@@ -374,7 +374,7 @@
 									</div>
 									<figcaption>
 										<div class="team-member-position margin-20px-top text-center">
-											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Rahul Nachare</div>
+											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">John Doe</div>
 											<div class="text-extra-small text-uppercase text-medium-gray">Co- Fouder / Creative Director</div>
 										</div>
 									</figcaption>
@@ -398,7 +398,7 @@
 									</div>
 									<figcaption>
 										<div class="team-member-position margin-20px-top text-center">
-											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Omkar Misal</div>
+											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">John Cena</div>
 											<div class="text-extra-small text-uppercase text-medium-gray">Creative Studio Head</div>
 										</div>
 									</figcaption>
@@ -422,7 +422,7 @@
 									</div>
 									<figcaption>
 										<div class="team-member-position margin-20px-top text-center">
-											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Ravindra Rakhame</div>
+											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Albert Doe</div>
 											<div class="text-extra-small text-uppercase text-medium-gray">H.R. Director</div>
 										</div>
 									</figcaption>
@@ -446,7 +446,7 @@
 									</div>
 									<figcaption>
 										<div class="team-member-position margin-20px-top text-center">
-											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Dinesh Teli</div>
+											<div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Tavi Castro</div>
 											<div class="text-extra-small text-uppercase text-medium-gray">Board of Director</div>
 										</div>
 									</figcaption>
